<resources>
    <string name="app_name">ProyectoFinal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="textName">Full Name</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="textStreet">Address</string>
    <string name="textZipCode">Zip Code</string>
    <string name="textPhoneNumber">Phone Number</string>
    <string name="tittleNews">News</string>
    <string name="tittleCoupons">Coupons</string>
    <string name="tittleOrder">Delivery</string>
    <string name="tittleLocations">Locations</string>
    <string name="orden_flautas">Orden de Flautas</string>
    <string name="nuggets">Nuggets</string>
    <string name="dos_piezas_pollo">2 piezas de Pollo</string>
    <string name="tres_piezas_pollo">3 piezas de Pollo</string>
    <string name="cinco_piezas_pollo">5 piezas de Pollo</string>
    <string name="siete_piezas_pollo">7 piezas de Pollo</string>
    <string name="diez_piezas_pollo">10 piezas de Pollo</string>
    <string name="doce_piezas_pollo">12 piezas de Pollo</string>
    <string name="quince_piezas_pollo">15 piezas de Pollo</string>
    <string name="paquete_siete_piezas">Paquete 7 Piezas</string>
    <string name="paquete_diez_piezas">Paquete 10 Piezas</string>
    <string name="paquete_doce_piezas">Paquete 12 Piezas</string>
    <string name="paquete_quince_piezas">Paquete 15 Piezas</string>
    <string name="combo_hamburguesa_res">Combo de Hamburguesa de Res</string>
    <string name="combo_hamburguesa_pollo">Combo de Hamburguesa de Pollo</string>
    <string name="combo_flautas">Combo Flautas</string>
    <string name="ensalada_cesar_con_pollo">Ensalada César Con Pollo</string>
    <string name="ensalada_chef_con_pollo">Ensalada del Chef con Pollo</string>
    <string name="tacos_pollo_uno">Tacos de Pollo (1 pza)</string>
    <string name="tacos_pollo_cinco">Tacos de Pollo (5 pzas)</string>
    <string name="tacos_pollo_diez">Tacos de Pollo (10 pzas)</string>
    <string name="col_tradicional">Col Tradicional</string>
    <string name="sopa_arroz">Sopa de Arroz</string>
    <string name="frijoles_charros">Frijoles Charros</string>
    <string name="pure_papa">Puré de Papa</string>
    <string name="ensalada_codito">Ensalada de Codito</string>
    <string name="ensalada_fresca">Ensalada Fresca</string>
    <string name="papas_francesa">Papas a la francesa</string>
    <string name="flan_napolitano">Flan Napolitano</string>
    <string name="pay_queso">Pay de Queso</string>
    <string name="pay_manzana">Pay de Manzana</string>
    <string name="ciel_natural">Ciel Natural 600 ml</string>
    <string name="agua_horchata">Agua de Horchata 500 ml</string>
    <string name="agua_jamaica">Agua de Jamaica 500 ml</string>
    <string name="agua_tamarindo">Agua de Tamarindo 500 ml</string>
    <string name="coca_cola_original">Coca-Cola Original 355 ml</string>
    <string name="sidral_mundet">Sidral Mundet 355 ml</string>
    <string name="sprite">Sprite 355 ml</string>
    <string name="pepeluche">Pepeluche</string>
    <string name="orden_flautas_des">3 Flautas rellenas de pollo y papa.</string>
    <string name="nuggets_des">Nuggets de pollo.</string>
    <string name="dos_piezas_pollo_des">2 piezas de pollo asado, pierna y muslo, incluye salsa y tortillas</string>
    <string name="tres_piezas_pollo_des">3 piezas de pollo asado, pierna y muslo, incluye salsa y tortillas</string>
    <string name="cinco_piezas_pollo_des">5 piezas de pollo asado, pierna y muslo, incluye salsa y tortillas</string>
    <string name="siete_piezas_pollo_des">7 piezas de pollo asado, pierna y muslo, incluye salsa y tortillas</string>
    <string name="diez_piezas_pollo_des">10 piezas de pollo asado, pierna y muslo, incluye salsa y tortillas</string>
    <string name="doce_piezas_pollo_des">12 piezas de pollo asado, pierna y muslo, incluye salsa y tortillas</string>
    <string name="quince_piezas_pollo_des">15 piezas de pollo asado, pierna y muslo, incluye salsa y tortillas</string>
    <string name="pollo_trocitos_des">Pollo en Trocitos</string>
    <string name="paquete_siete_piezas_des">Pollo asado, 7 piezas mixtas con acompañamiento a elegir.</string>
    <string name="paquete_diez_piezas_des">Pollo asado, 10 piezas mixtas con 2 acompañamientos a elegir.</string>
    <string name="paquete_doce_piezas_des">Pollo asado, 12 piezas mixtas con 3 acompañamientos a elegir.</string>
    <string name="paquete_quince_piezas_des">Pollo asado, 15 piezas mixtas con  4 acompañamientos a elegir.</string>
    <string name="combo_hamburguesa_res_des">1 hamburguesa de carne de res hecha con bollo artesanal y sabor casero + 1 acompañamiento + 1 bebida individual.</string>
    <string name="combo_hamburguesa_pollo_des">Hamburguesa de pollo hecha con bollo artesanal y sabor casero + 1 acompañamiento + 1 bebida individual.</string>
    <string name="combo_flautas_des">3 flautas de 15 cm, hechas con tortilla raspada, rellenas con un guiso de pollo + 1 acompañamiento + 1 bebida individual.</string>
    <string name="ensalada_cesar_con_pollo_des">Con pechuga a la parrilla o crispy, queso parmesano y aderezo César sobre una cama de lechuga y vegetales seleccionados.</string>
    <string name="ensalada_chef_con_pollo_des">Con pechuga a la parrilla o crispy, jamón en cubitos, tocino, queso Monterey Jack y aderezo ranch sobre una cama de lechuga y vegetales seleccionados.</string>
    <string name="tacos_pollo_uno_des">Con el guiso especial de la casa hecho de pollo y papa.</string>
    <string name="tacos_pollo_cinco_des">Con el guiso especial de la casa hecho de pollo y papa.</string>
    <string name="tacos_pollo_diez_des">Con el guiso especial de la casa hecho de pollo y papa.</string>
    <string name="col_tradicional_des">Cremosa mezcla de col blanca y zanahoria.</string>
    <string name="sopa_arroz_des">Arroz rojo esponjosito con chícharos, elote y zanahoria en cubitos.</string>
    <string name="frijoles_charros_des">Frijolitos de la olla cocinados a fuego lento con salchicha, tocino, chorizo, cebolla, cilantro y jitomate.</string>
    <string name="pure_papa_des">Cremosa papilla bañada en sabroso gravy.</string>
    <string name="ensalada_codito_des">Mezcla sabrosa de pasta de coditos, chícharos, elote, zanahoria y jamón en cubitos.</string>
    <string name="ensalada_fresca_des">Con puro vegetal seleccionado: lechuga romana, zanahoria, pimiento, apio, col morada, tomate cherry y pepino.</string>
    <string name="papas_francesa_des">Extracrujientes y extrasabrosas. Hechas con puras papas selectas.</string>
    <string name="flan_napolitano_des">De sabor adictivo y textura que se deshace en tu boca.</string>
    <string name="pay_queso_des">Con textura suave y crujiente costra de galleta.</string>
    <string name="pay_manzana_des">Barrita rellena de mermelada y espolvoreada como churro.</string>
    <string name="ciel_natural_des">Agua Ciel embotellada.</string>
    <string name="agua_horchata_des">Ligeramente cremosa y dulce con un toquecito de canela.</string>
    <string name="agua_jamaica_des">La esencia de la flor de jamaica suavemente endulzada.</string>
    <string name="agua_tamarindo_des">Con pulpa dulce y ligeramente acidita.</string>
    <string name="coca_cola_original_des">Refresco Individual de la familia Coca-Cola.</string>
    <string name="sidral_mundet_des"> Refresco Individual de la familia Coca-Cola.</string>
    <string name="sprite_des">Refresco Individual de la familia Coca-Cola.</string>
    <string name="pepeluche_des">Pepeluche</string>
    <string name="orden_flautas_price">$106.00</string>
    <string name="nuggets_price">$69.00</string>
    <string name="dos_piezas_pollo_price">$96.00</string>
    <string name="tres_piezas_pollo_price">$103.00</string>
    <string name="cinco_piezas_pollo_price">$175.00</string>
    <string name="siete_piezas_pollo_price">$249.00</string>
    <string name="diez_piezas_pollo_price">$293.00</string>
    <string name="doce_piezas_pollo_price">$365.00</string>
    <string name="quince_piezas_pollo_price">$439.00</string>
    <string name="paquete_siete_piezas_price">$293.00</string>
    <string name="paquete_diez_piezas_price">$374.00</string>
    <string name="paquete_doce_piezas_price">$481.00</string>
    <string name="paquete_quince_piezas_price">$586.00</string>
    <string name="combo_hamburguesa_res_price">$181.00</string>
    <string name="combo_hamburguesa_pollo_price">$181.00</string>
    <string name="combo_flautas_price">$168.00</string>
    <string name="ensalada_cesar_con_pollo_price">$174.00</string>
    <string name="ensalada_chef_con_pollo_price">$174.00</string>
    <string name="tacos_pollo_uno_price">$16.00</string>
    <string name="tacos_pollo_cinco_price">$86.00</string>
    <string name="tacos_pollo_diez_price">$124.00</string>
    <string name="col_tradicional_price">$44.00</string>
    <string name="sopa_arroz_price">$44.00</string>
    <string name="frijoles_charros_price">$44.00</string>
    <string name="pure_papa_price">$44.00</string>
    <string name="ensalada_codito_price">$44.00</string>
    <string name="ensalada_fresca_price">$56.00</string>
    <string name="papas_francesa_price">$44.00</string>
    <string name="flan_napolitano_price">$56.00</string>
    <string name="pay_queso_price">$56.00</string>
    <string name="pay_manzana_price">$56.00</string>
    <string name="ciel_natural_price">$33.00</string>
    <string name="agua_horchata_price">$33.00</string>
    <string name="agua_jamaica_price">$33.00</string>
    <string name="agua_tamarindo_price">$33.00</string>
    <string name="coca_cola_original_price">$33.00</string>
    <string name="sidral_mundet_price">$33.00</string>
    <string name="sprite_price">$33.00</string>
    <string name="pepeluche_price">$136.00</string>
    <string name="sucursal_plaza_andina">Plaza Andina</string>
    <string name="sucursal_bahia_gastronomica">Bahía Gastronómica</string>
    <string name="sucursal_pueblo_mediterraneo">Pueblo Mediterráneo</string>
    <string name="sucursal_callejon_toscana">Callejón Toscana</string>
    <string name="sucursal_rinconcito_caribeno">Rinconcito Caribeño</string>
    <string name="sucursal_aldea_oriental">Aldea Oriental</string>
    <string name="sucursal_avenida_iberica">Avenida Ibérica</string>
    <string name="sucursal_barrio_gastronomico">Barrio Gastronómico</string>
    <string name="sucursal_costanera_sabores">Costanera Sabores</string>
    <string name="sucursal_esquina_bohemia">Esquina Bohemia</string>
    <string name="direccion_plaza_andina">Calle 5 de Mayo #123, Col. Andina</string>
    <string name="direccion_bahia_gastronomica">Av. del Mar #456, Playa Paraíso</string>
    <string name="direccion_pueblo_mediterraneo">Calle Olivo #789, Pueblo Mediterráneo</string>
    <string name="direccion_callejon_toscana">Carrer Tosca #234, Carrer de Sant Martí</string>
    <string name="direccion_rinconcito_caribeno">Calle Palma #567, Rinconcito Caribeño</string>
    <string name="direccion_aldea_oriental">Rua Oriental #890, Aldea Oriental</string>
    <string name="direccion_avenida_iberica">Avinguda Ibèrica #123, Barri Gòtic</string>
    <string name="direccion_barrio_gastronomico">Rua Gastronômica #456, Bairro Alto</string>
    <string name="direccion_costanera_sabores">Av. Costanera #789, Barrio Sabores</string>
    <string name="direccion_esquina_bohemia">Calle Bohemia #234, Esquina Bohemia</string>
    <string name="estado_plaza_andina"> Ciudad de México</string>
    <string name="estado_bahia_gastronomica"> Cancún</string>
    <string name="estado_pueblo_mediterraneo"> Barcelona</string>
    <string name="estado_callejon_toscana"> Florencia</string>
    <string name="estado_rinconcito_caribeno"> Santo Domingo</string>
    <string name="distancia_plaza_andina">10km</string>
</resources>