<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/textName"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />


    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/textEmail"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:hint="@string/textPassword"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/editPass2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:hint="Retype your password"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:hint="@string/textPhoneNumber"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No tienes cuenta?"
            android:gravity="center"
            android:layout_marginStart="30dp"/>

        <TextView
            android:id="@+id/textSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:layout_marginStart="10dp"/>


    </LinearLayout>



    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:text="Sign Up" />


</LinearLayout>