<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="16dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageCard"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:scaleType="fitXY"
            android:src="@drawable/orden_flautas"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCardTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orden_flautas"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textCardDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orden_flautas_des"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/textCardPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orden_flautas_price"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>