<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activites.DetailActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/bottomFragment">

        <ImageView
            android:id="@+id/imageViewDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/flan"
            android:scaleType="centerCrop"/>

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="Regresar" />

    </FrameLayout>

    <TextView
        android:id="@+id/textViewTitleDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flan_napolitano"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewDesDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flan_napolitano_des"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewPriceDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flan_napolitano_price"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp" />


</LinearLayout>